# config_manager

./: CMakeLists.txt  Makefile  README.md
include/: configuration.hpp  format_manager.hpp
tests/: test_configuration.cpp  test_configuration_no_format_manager.cpp
